--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "react-dom": "17.0.1",
     "react-feather": "2.0.9",
     "react-scripts": "4.0.1",
-    "styled-components": "5.2.1"
+    "styled-components": "5.2.1",
+    "type-fest": "^0.21.3"
   },
   "scripts": {
     "start": "react-scripts start",
